feat: add footer

--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,269 @@
         <!-- /Main -->
 
         <!-- Footer -->
-        <footer></footer>
+        <footer class="section__footer pos-relative bg-tertiary">
+            <div class="container">
+                <div class="footer__inner d-flex flex-column text-body">
+                    <div class="footer__top d-flex-between-center gap-3">
+                        <a href="#" class="link-action hover-accent-08">Услуги и цены</a>
+                        <a href="#" class="link-action hover-accent-08 text-underline">Полный прайс лист</a>
+                    </div>
+                    <div class="footer__info d-flex-between-center flex-wrap w-100 gap-7 pos-relative">
+                        <nav class="footer__nav">
+                            <ul class="footer__nav-list d-flex-center-center flex-wrap">
+                                <li class="footer__nav-group">
+                                    <a href="#" class="footer__nav-title link-action hover-accent-08">Разработка сайтов</a>
+                                    <ul class="footer__subnav-list">
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Сайт визитка</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Сайт каталог</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Интернет магазин</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Корпоративный сайт</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Лендинги</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Поисковики и порталы</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Тех.задания и прототипы</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Туроператоры</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Турагенства</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Отели</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Рестораны</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="footer__nav-group">
+                                    <a href="#" class="footer__nav-title link-action hover-accent-08">Продвижение</a>
+                                    <ul class="footer__subnav-list">
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">SEO продвижение</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Контекстная реклама</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Догоняющая реклама</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Продвижение в соц. сетях</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="footer__nav-group">
+                                    <a href="#" class="footer__nav-title link-action hover-accent-08">Тех<span class="footer__nav-title--span">ническая </span>поддержка и модернизация</a>
+                                    <ul class="footer__subnav-list">
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Аудит сайта</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Хостинг</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Онлайн консультант</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Адаптация под мобильные</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Безопасный протокол</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Закон о персональных данных</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Интеграция CRM</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Оплата картами на сайте</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Дизайн и фирменный стиль</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="footer__nav-group">
+                                    <a href="#" class="footer__nav-title link-action hover-accent-08">О компании</a>
+                                    <ul class="footer__subnav-list">
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Портфолио и отзывы</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Обучение</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Отзывы</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Новости</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Блог</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="link-action hover-accent-08">Контакты</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="footer__contacts d-flex-between-center flex-column gap-3">
+                            <img src="/assets/images/logo-footer.png" class="footer-logo" alt="Фабрика турсайтов" width="345" height="58" loading="lazy">
+                            <p class="footer__contacts--subtitle text-body">Проект компании <a href="#" class="link-action hover-accent-08">«СЕМЬ ВЕТРОВ»</a></p>
+                            <div class="footer__contacts--contact d-flex-center-center text-center gap-3">
+                                <p class="text-body">Тел.: 
+                                    <a href="tel:+74956385470" class="link-action hover-accent-08" title="Позвонить +7 495 638-54-70"
+                                        >+7 495 638-54-70
+                                    </a>
+                                 (мн.),<br>для регионов: 
+                                    <a href="tel:88006385470" class="link-action hover-accent-08" title="Позвонить 8 800 638-54-70"
+                                        >8 800 638-54-70
+                                    </a>
+                                </p>
+                                <ul class="d-flex-center-center gap-3">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            target="_blank"
+                                            class="icon-link icon-social icon-social--telegram transform-active"
+                                            title="Перейти в Telegram"
+                                        >
+                                            <svg
+                                                class="icon"
+                                                width="32"
+                                                height="32"
+                                            >
+                                                <use
+                                                    href="/assets/icons/sprite.svg#icon-telegram"
+                                                ></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            target="_blank"
+                                            class="icon-link icon-social icon-social--whatsapp transform-active"
+                                            title="Перейти в WhatsApp"
+                                        >
+                                            <svg
+                                                class="icon"
+                                                width="32"
+                                                height="32"
+                                            >
+                                                <use
+                                                    href="/assets/icons/sprite.svg#icon-whatsapp"
+                                                ></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a href="#" class="link-action hover-accent-08">
+                                <p class="text-body text-underline">Политика обработки персональных данных</p>
+                            </a>
+                        </div>
+                        <div class="footer__promo d-flex-between-center flex-column gap-3">
+                            <div class="footer__promo-items d-flex-between-center gap-3">
+                                <p class="footer__promo-text text-body text-center">Следите за нами в соц.сетях, участвуйте в акциях, смотрите за успешными решениями, узнавайте фишки продвижения и разработки сайтов</p>
+                                <ul class="footer__social-icons d-flex-center-center gap-3 mb-2rem">
+                                    <li>
+                                        <a
+                                            href="#"
+                                            target="_blank"
+                                            class="icon-link icon-social icon-social--vk transform-active"
+                                            title="Перейти в VK"
+                                        >
+                                            <svg
+                                                class="icon"
+                                                width="32"
+                                                height="32"
+                                            >
+                                                <use
+                                                    href="/assets/icons/sprite.svg#icon-vk"
+                                                ></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="#"
+                                            target="_blank"
+                                            class="icon-link icon-social icon-social--youtube transform-active"
+                                            title="Перейти в Youtube"
+                                        >
+                                            <svg
+                                                class="icon"
+                                                width="32"
+                                                height="32"
+                                            >
+                                                <use
+                                                    href="/assets/icons/sprite.svg#icon-youtube"
+                                                ></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="footer__payment-logos">
+                                <ul class="d-flex-center-center gap-3">
+                                    <li>
+                                        <svg
+                                            class="icon"
+                                            width="106"
+                                            height="32"
+                                        >
+                                            <use
+                                                href="/assets/icons/sprite.svg#icon-visa"
+                                            ></use>
+                                        </svg>
+                                    </li>
+                                    <li>
+                                        <svg
+                                            class="icon"
+                                            width="54"
+                                            height="32"
+                                        >
+                                            <use
+                                                href="/assets/icons/sprite.svg#icon-mastercard"
+                                            ></use>
+                                        </svg>
+                                    </li>
+                                    <li>
+                                        <svg
+                                            class="icon"
+                                            width="111"
+                                            height="32"
+                                        >
+                                            <use
+                                                href="/assets/icons/sprite.svg#icon-mir"
+                                            ></use>
+                                        </svg>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <img src="/assets/images/footer-top3.png" alt="Рейтинг разработчиков" class="footer-img" width="304" height="148" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- /Footer -->
         <script src="template/lib/swiper/swiper-bundle.min.js"></script>
         <script src="template/js/Mobile-panel.js"></script>
